Fix image shift on article pages

--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -20,9 +20,9 @@
   align-items: center;
   border-radius: 4px;
   display: flex;
+  height: 350px;
   justify-content: center;
   margin: 0;
-  max-height: 350px;
   overflow: hidden;
 
   img {
